--- a/Region/CountriesEuropa_Dictionary.yml
+++ b/Region/CountriesEuropa_Dictionary.yml
@@ -1,1 +1,102 @@
-
+-
+   Code: AL
+   Country: Albania
+-
+   Code: AT
+   Country: Austria
+-
+   Code: BA
+   Country: Bosnia And Herzegovina
+-
+   Code: BE
+   Country: Belgium
+-
+   Code: BG
+   Country: Bulgaria
+-
+   Code: CH
+   Country: Switzerland
+-
+   Code: CY
+   Country: Cyprus
+-
+   Code: CZ
+   Country: Czech Republic
+-
+   Code: DE
+   Country: Germany
+-
+   Code: DK
+   Country: Denmark
+-
+   Code: EE
+   Country: Estonia
+-
+   Code: EL
+   Country: Greece
+-
+   Code: ES
+   Country: Spain
+-
+   Code: FI
+   Country: Finland
+-
+   Code: FR
+   Country: France
+-
+   Code: HR
+   Country: Croatia
+-
+   Code: HU
+   Country: Hungary
+-
+   Code: IE
+   Country: Ireland
+-
+   Code: IT
+   Country: Italy
+-
+   Code: LT
+   Country: Lithuania
+-
+   Code: LU
+   Country: Luxembourg
+-
+   Code: LV
+   Country: Latvia
+-
+   Code: ME
+   Country: Montenegro
+-
+   Code: MT
+   Country: Malta
+-
+   Code: NL
+   Country: Netherlands
+-
+   Code: NO
+   Country: Norway
+-
+   Code: PL
+   Country: Poland
+-
+   Code: PT
+   Country: Portugal
+-
+   Code: RO
+   Country: Romania
+-
+   Code: RS
+   Country: Serbia
+-
+   Code: SE
+   Country: Sweden
+-
+   Code: SI
+   Country: Slovenia
+-
+   Code: SK
+   Country: Slovakia
+-
+   Code: UK
+   Country: United Kingdom
