--- a/Model/Model_Suite.yml
+++ b/Model/Model_Suite.yml
@@ -1,1 +1,36 @@
-
+-
+   __Model__: EMPIRE
+   __Version__: 1.0.0
+-
+   __Model__: e-Transport
+   __Version__: 1.0.0
+-
+   __Model__: EXIOMOD
+   __Version__: 2.0.0
+-
+   __Model__: FanSi
+   __Version__: 1.0.0
+-
+   __Model__: FRESH:COM
+   __Version__: 1.0.0
+-
+   __Model__: GENeSYS-MOD
+   __Version__: 1.0.0
+-
+   __Model__: HERO
+   __Version__: 1.0.0
+-
+   __Model__: openTEPES
+   __Version__: 1.6.12
+-
+   __Model__: OSCARS
+   __Version__: 1.0.0
+-
+   __Model__: Plan4EU
+   __Version__: 1.0.0
+-
+   __Model__: REMES-EU
+   __Version__: 1.0.0
+-
+   __Model__: SCOPE-SD
+   __Version__: 1.0.0
