--- a/Scenario/Scenario_Suite.yml
+++ b/Scenario/Scenario_Suite.yml
@@ -1,1 +1,27 @@
-
+-
+   Study: CS1
+   Name: Case Study 1: Demand response – the behavior of individuals
+-
+   Study: CS2
+   Name: Case Study 2: Communities of actors
+-
+   Study: CS3
+   Name: Case Study 3 - Need for flexibility: Storage
+-
+   Study: CS4
+   Name: Case Study 4 – Need for flexibility: Sector coupling
+-
+   Study: CS5
+   Name: Case Study 5 - Decentralization
+-
+   Study: CS6
+   Name: Case Study 6 – Innovative Technologies
+-
+   Study: CS7
+   Name: Case Study 7 – Integration of electricity and heating sector
+-
+   Study: CS8
+   Name: Case Study 8 - Gas storage for flexibility
+-
+   Study: CS9
+   Name: Case Study 9 - Effective policies for investment incentives
