Update YAML files

--- a/Region/District_Dictionary.yml
+++ b/Region/District_Dictionary.yml
@@ -1,1 +1,15 @@
-
+-
+   Code: District001
+   District: District 1
+-
+   Code: District002
+   District: District 2
+-
+   Code: District003
+   District: District 3
+-
+   Code: District004
+   District: District 4
+-
+   Code: District005
+   District: District 5
