--- a/Region/EndUser_Dictionary.yml
+++ b/Region/EndUser_Dictionary.yml
@@ -1,1 +1,15 @@
-
+-
+   Code: User001
+   EndUser: User 1
+-
+   Code: User002
+   EndUser: User 2
+-
+   Code: User003
+   EndUser: User 3
+-
+   Code: User004
+   EndUser: User 4
+-
+   Code: User005
+   EndUser: User 5
