Update  all Variable Section

--- a/Variable/Category.yml
+++ b/Variable/Category.yml
@@ -1,1 +1,26 @@
-
+-
+   Category: Agriculture.AFOLU.AFOFI
+-
+   Category: Demography
+-
+   Category: Economy
+-
+   Category: Emissions
+-
+   Category: Employment
+-
+   Category: Energy
+-
+   Category: EnergyService
+-
+   Category: GDP
+-
+   Category: Investment
+-
+   Category: Land
+-
+   Category: Trade
+-
+   Category: Price
+-
+   Category: ValueAdded
