--- a/Variable/NonEnergy.yml
+++ b/Variable/NonEnergy.yml
@@ -1,1 +1,14 @@
-
+-
+   NonEnergy: Crops
+-
+   NonEnergy: Livestock
+-
+   NonEnergy: Forest
+-
+   NonEnergy: Pasture
+-
+   NonEnergy: Built-upArea
+-
+   NonEnergy: OtherLand
+-
+   NonEnergy: Residues
