Update Variable Section: Technologies

--- a/Variable/Technology_Level12.yml
+++ b/Variable/Technology_Level12.yml
@@ -1,39 +1,39 @@
 -
    Technology Level 1: VehicleTransportation
-   Technology Level 2: BatteryElectricVehicle(BEV)
+   Technology Level 2: BatteryElectricVehicle
 -
    Technology Level 1: EnergyStorageSystem
-   Technology Level 2: BatteryEnergyStorage(BES)
+   Technology Level 2: BatteryEnergyStorage
 -
    Technology Level 1: BiomassToPower
-   Technology Level 2: BiomassWCCS
+   Technology Level 2: BiomassW/CCS
 -
    Technology Level 1: BiomassToPower
-   Technology Level 2: BiomassWOCCS
+   Technology Level 2: BiomassW/oCCS
 -
    Technology Level 1: ThermalMachine
    Technology Level 2: Boiler
 -
    Technology Level 1: DirectAirCaptureMachine
-   Technology Level 2: CarbonCaptureAndStorage(CCS)
+   Technology Level 2: CarbonCaptureAndStorage
 -
    Technology Level 1: ThermalMachine
    Technology Level 2: Chiller
 -
    Technology Level 1: CoalToPower
-   Technology Level 2: CoalWCCS
+   Technology Level 2: CoalW/CCS
 -
    Technology Level 1: CoalToPower
-   Technology Level 2: CoalWOCCS
+   Technology Level 2: CoalW/oCCS
 -
    Technology Level 1: Cogeneration
-   Technology Level 2: Cogeneration.CombinedHeatAndPower(CHP)
+   Technology Level 2: Cogeneration.CombinedHeatAndPower
 -
    Technology Level 1: GasTurbine
-   Technology Level 2: CombinedCycleGasTurbine(CCGT)
+   Technology Level 2: CombinedCycleGasTurbine
 -
    Technology Level 1: EnergyStorageSystem
-   Technology Level 2: Compressed-AirEnergyStorage(CAES)
+   Technology Level 2: CompressedAirEnergyStorage
 -
    Technology Level 1: ThermalMachine
    Technology Level 2: CondensingPlant
@@ -45,7 +45,7 @@
    Technology Level 2: DemandResponse
 -
    Technology Level 1: VehicleTransportation
-   Technology Level 2: FuelCellElectricVehicle(FCEV)
+   Technology Level 2: FuelCellElectricVehicle
 -
    Technology Level 1: GasToPower
    Technology Level 2: Gas-firedPower
@@ -60,7 +60,7 @@
    Technology Level 2: HeatPump
 -
    Technology Level 1: EnergyStorage
-   Technology Level 2: Hydrogen(H2)
+   Technology Level 2: Hydrogen
 -
    Technology Level 1: HydroToPower
    Technology Level 2: HydropowerLarge
@@ -69,7 +69,7 @@
    Technology Level 2: HydropowerSmall
 -
    Technology Level 1: VehicleTransportation
-   Technology Level 2: Internal-CombustionEngineVehicles(ICEV)
+   Technology Level 2: Internal-CombustionEngineVehicles
 -
    Technology Level 1: LigniteToPower
    Technology Level 2:
@@ -78,10 +78,10 @@
    Technology Level 2:
 -
    Technology Level 1: GasToPower
-   Technology Level 2: NaturalGasWCCS
+   Technology Level 2: NaturalGasW/CCS
 -
    Technology Level 1: GasToPower
-   Technology Level 2: NaturalGasWOCCS
+   Technology Level 2: NaturalGasW/oCCS
 -
    Technology Level 1: NuclearToPower
    Technology Level 2:
@@ -108,16 +108,16 @@
    Technology Level 2:
 -
    Technology Level 1: EnergyStorageSystem
-   Technology Level 2: Pumped-StorageHydro(PHS)
+   Technology Level 2: Pumped-StorageHydro
 -
    Technology Level 1: RenewableEnergySource
-   Technology Level 2: SolarPVRooftop
+   Technology Level 2: SolarPhotoVoltaicRooftop
 -
    Technology Level 1: RenewableEnergySource
-   Technology Level 2: SolarPVUtility
+   Technology Level 2: SolarPhotoVoltaicUtility
 -
    Technology Level 1: RenerableEnergySource
-   Technology Level 2: SolarThermal(CSP)
+   Technology Level 2: SolarThermal
 -
    Technology Level 1: RenewableEnergySource
    Technology Level 2: WindOffshore
